# AcoFork-Dress

./: .env  .gitignore  README.md  dress_tools.py  main.py  package-lock.json  package.json  pyproject.toml  tools_v2.py
dress-api-website/: components.d.ts  index.html  package-lock.json  package.json  vite.config.js
dress-api-website/src/: App.vue  main.js  router.js  style.css
dress-api-website/src/config/: index.js
dress-api-website/src/pages/: AuthorDetail.vue  Home.vue
dress-api-website/src/scripts/: avatar_utils.js
dress-api-worker/: package-lock.json  package.json  wrangler.jsonc
dress-api-worker/src/: index.js
dress-api-worker/test/: index.spec.js
public/: index_0.json  index_1.json  index_2.json
