[project]
name = "dress-acofork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "colorama==0.4.6",
    "fastapi[standard]==0.128.0",
    "gitpython==3.1.46",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "python-dotenv==1.2.1",
    "tqdm>=4.67.3",
    "uvicorn==0.40.0",
]
[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"